    CHANGES IN pitchRx VERSION 1.5

NEW ADDITION

  - strikeFX will now recognize geom = "raster". Raster is a special case of "tile" where all tiles are the same size. When using the model argument, a geom_raster() is now used. This means 'binwidths' can no longer be altered.

BUG FIXES

  - miniscoreboard.xml files changed slightly in 2014 which caused some errors. These are now fixed.
  - update_db will now actually append to the database if connect argument is not specified.

    CHANGES IN pitchRx VERSION 1.4

MAJOR IMPROVEMENTS

  - I've decided the 'atbat' table should include a 'date' column (for reasons discussed here -- http://baseballwithr.wordpress.com/2014/04/13/modifying-and-querying-a-pitchfx-database-with-dplyr/). If you already have a database and update it using scrape(), a 'date' column will be added to the 'atbat' table (if 'date' doesn't already exist). Unfortunately, when 'date' is added, any 'atbat' INDEXs you previously created will have to be recreated manually.

  - The update_db() function was added to help automate sequential database updates.

MINOR IMPROVEMENTS

  - Added some simple tests to verify scrape() works as intended.

MINOR CHANGES

  - The rgl package was moved from IMPORTS to SUGGESTS since it was causing so many installation difficulties.

    CHANGES IN pitchRx VERSION 1.3

  - Added support for scraping 2014 data.

    CHANGES IN pitchRx VERSION 1.2

MAJOR FIXES

  - In the switch to version 1.0, the count column started to be computed incorrectly. This is now fixed.

    CHANGES IN pitchRx VERSION 1.1

MAJOR FIXES

  - Not all records in the atbat table were being returned due to an improper use of merge. This is now fixed.
  - Records are sometimes duplicated when extracting from source. Duplicated records will now be removed.